feat: add animations for hero section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply font-sans dark:bg-neutral-dark dark:text-neutral-100 dark:selection:bg-primary dark:selection:text-neutral-light;
+  @apply font-sans dark:bg-neutral-dark dark:text-neutral-100 selection:bg-primary selection:text-neutral-light;
 }
 
 @layer utilities {
