feat: add integration with sendgrid and related api endpoint

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html {
   @apply font-sans dark:bg-neutral-dark dark:text-neutral-100 selection:bg-primary selection:text-neutral-light;
 }
 
